--- a/src/app/components/dashboard/content/waiting-room/waiting-room.component.css
+++ b/src/app/components/dashboard/content/waiting-room/waiting-room.component.css
@@ -2,16 +2,11 @@
     position: relative;
 }
 
-.no-waiting-room {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+.no-waiting-room {}
 
 .no-waiting-room i {
     font-size: 82px;
-    color: #F5F6FA;
+    color: white;
 }
 
 .no-waiting-room {
